Fix CLI read of Markdown tables

--- a/site/manual.html
+++ b/site/manual.html
@@ -54,29 +54,31 @@
 <p>Hurmet documents are saved in <em>Markdown</em>, a lightweight, easy-to-read markup format. Hurmet&#x27;s version of Markdown is extended to enable calculations, complex tables, and more.</p>
 <details><summary>Click for more…</summary>
 <p>Paragraphs are preceded by a blank line.<br>A newline is indicated by a backslash, <code>\</code>, at the end of a line.</p>
-<table class="grid"><tr><th style="width: 392px">Type…</th>
-<th style="width: 177px">To get…</th>
-</tr>
-<tr><td style="width: 392px"><code>_Italic_</code></td><td style="width: 177px"><em>Italic</em></td></tr>
-<tr><td style="width: 392px"><code>**Bold**</code></td><td style="width: 177px"><strong>Bold</strong></td></tr>
-<tr><td style="width: 392px"><code>**_Bold Italic_**</code></td><td style="width: 177px"><strong><em>Bold Italic</em></strong></td></tr>
-<tr><td style="width: 392px"><code>~subscript~</code></td><td style="width: 177px"><sub>subscript</sub></td></tr>
-<tr><td style="width: 392px"><code>~~strikethrough~~</code></td><td style="width: 177px"><del>strikethrough</del></td></tr>
-<tr><td style="width: 392px"><code>`inline code`</code></td><td style="width: 177px"><code>inline code</code></td></tr>
-<tr><td style="width: 392px"><code>¢` calcu = la/tion `</code></td><td style="width: 177px"><span class='hurmet-calc' data-entry='calcu = la/tion'><math><mrow><mrow><mrow><mi mathvariant="normal">c</mi></mrow><mrow><mi mathvariant="normal">a</mi></mrow><mrow><mi mathvariant="normal">l</mi></mrow><mrow><mi mathvariant="normal">c</mi></mrow><mrow><mi mathvariant="normal">u</mi></mrow></mrow><mo>=</mo></mrow><mrow><mstyle displaystyle="true" scriptlevel="0"><mfrac><mrow><mrow><mi mathvariant="normal">l</mi></mrow><mrow><mi mathvariant="normal">a</mi></mrow></mrow><mrow><mrow><mi mathvariant="normal">t</mi></mrow><mrow><mi mathvariant="normal">i</mi></mrow><mrow><mi mathvariant="normal">o</mi></mrow><mrow><mi mathvariant="normal">n</mi></mrow></mrow></mfrac></mstyle></mrow></math></span></td></tr>
-<tr><td style="width: 392px"><code>$\TeX$</code></td><td style="width: 177px"><span class='hurmet-calc' data-entry='\TeX'><math><mrow><mtext>T</mtext><mspace width="-0.1667em" style="margin-left:-0.1667em;"></mspace><mpadded voffset="-0.2155em" style="padding:0 0 0.2155em 0;"><mstyle scriptlevel="0" displaystyle="false"><mtext>E</mtext></mstyle></mpadded><mspace width="-0.125em" style="margin-left:-0.125em;"></mspace><mtext>X</mtext></mrow></math></span></td></tr>
-<tr><td style="width: 392px"><code># Heading 1</code></td><td style="width: 177px"><h1 id='heading-1'>Heading 1</h1>
+<table class="grid" style="width: 569px"><colgroup><col style="width: 392px"></col>
+<col style="width: 177px"></col>
+<th>Type…</th>
+<th>To get…</th>
+</colgroup>
+<tr><td><code>_Italic_</code></td><td><em>Italic</em></td></tr>
+<tr><td><code>**Bold**</code></td><td><strong>Bold</strong></td></tr>
+<tr><td><code>**_Bold Italic_**</code></td><td><strong><em>Bold Italic</em></strong></td></tr>
+<tr><td><code>~subscript~</code></td><td><sub>subscript</sub></td></tr>
+<tr><td><code>~~strikethrough~~</code></td><td><del>strikethrough</del></td></tr>
+<tr><td><code>`inline code`</code></td><td><code>inline code</code></td></tr>
+<tr><td><code>¢` calcu = la/tion `</code></td><td><span class='hurmet-calc' data-entry='calcu = la/tion'><math><mrow><mrow><mrow><mi mathvariant="normal">c</mi></mrow><mrow><mi mathvariant="normal">a</mi></mrow><mrow><mi mathvariant="normal">l</mi></mrow><mrow><mi mathvariant="normal">c</mi></mrow><mrow><mi mathvariant="normal">u</mi></mrow></mrow><mo>=</mo></mrow><mrow><mstyle displaystyle="true" scriptlevel="0"><mfrac><mrow><mrow><mi mathvariant="normal">l</mi></mrow><mrow><mi mathvariant="normal">a</mi></mrow></mrow><mrow><mrow><mi mathvariant="normal">t</mi></mrow><mrow><mi mathvariant="normal">i</mi></mrow><mrow><mi mathvariant="normal">o</mi></mrow><mrow><mi mathvariant="normal">n</mi></mrow></mrow></mfrac></mstyle></mrow></math></span></td></tr>
+<tr><td><code>$\TeX$</code></td><td><span class='hurmet-calc' data-entry='\TeX'><math><mrow><mtext>T</mtext><mspace width="-0.1667em" style="margin-left:-0.1667em;"></mspace><mpadded voffset="-0.2155em" style="padding:0 0 0.2155em 0;"><mstyle scriptlevel="0" displaystyle="false"><mtext>E</mtext></mstyle></mpadded><mspace width="-0.125em" style="margin-left:-0.125em;"></mspace><mtext>X</mtext></mrow></math></span></td></tr>
+<tr><td><code># Heading 1</code></td><td><h1 id='heading-1'>Heading 1</h1>
 </td></tr>
-<tr><td style="width: 392px"><code>## Heading 2</code></td><td style="width: 177px"><h2 id='heading-2'>Heading 2</h2>
+<tr><td><code>## Heading 2</code></td><td><h2 id='heading-2'>Heading 2</h2>
 </td></tr>
-<tr><td style="width: 392px"><code>[Link][link id]</code></td><td style="width: 177px"><a href='http://a.com'>Link</a></td></tr>
-<tr><td style="width: 392px"><code>![alt][id]</code></td><td style="width: 177px"><img src="data:image/svg+xml;utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16'%3E%3Cpath d='m14.998 2 .002.002v11.996l-.002.002H1.002L1 13.998V2.002L1.002 2h13.996zM15 1H1c-.55 0-1 .45-1 1v12c0 .55.45 1 1 1h14c.55 0 1-.45 1-1V2c0-.55-.45-1-1-1z'/%3E%3Cpath d='M13 4.5a1.5 1.5 0 1 1-3.001-.001A1.5 1.5 0 0 1 13 4.5zM14 13H2v-2l3.5-6 4 5h1L14 7z'/%3E%3C/svg%3E" alt="id"></td></tr>
-<tr><td style="width: 392px"><code>!![image and caption][id]</code></td><td style="width: 177px"><figure><img src="data:image/svg+xml;utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16'%3E%3Cpath d='m14.998 2 .002.002v11.996l-.002.002H1.002L1 13.998V2.002L1.002 2h13.996zM15 1H1c-.55 0-1 .45-1 1v12c0 .55.45 1 1 1h14c.55 0 1-.45 1-1V2c0-.55-.45-1-1-1z'/%3E%3Cpath d='M13 4.5a1.5 1.5 0 1 1-3.001-.001A1.5 1.5 0 0 1 13 4.5zM14 13H2v-2l3.5-6 4 5h1L14 7z'/%3E%3C/svg%3E" class="figimg" alt="id">
+<tr><td><code>[Link][link id]</code></td><td><a href='http://a.com'>Link</a></td></tr>
+<tr><td><code>![alt][id]</code></td><td><img src="data:image/svg+xml;utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16'%3E%3Cpath d='m14.998 2 .002.002v11.996l-.002.002H1.002L1 13.998V2.002L1.002 2h13.996zM15 1H1c-.55 0-1 .45-1 1v12c0 .55.45 1 1 1h14c.55 0 1-.45 1-1V2c0-.55-.45-1-1-1z'/%3E%3Cpath d='M13 4.5a1.5 1.5 0 1 1-3.001-.001A1.5 1.5 0 0 1 13 4.5zM14 13H2v-2l3.5-6 4 5h1L14 7z'/%3E%3C/svg%3E" alt="id"></td></tr>
+<tr><td><code>!![image and caption][id]</code></td><td><figure><img src="data:image/svg+xml;utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16'%3E%3Cpath d='m14.998 2 .002.002v11.996l-.002.002H1.002L1 13.998V2.002L1.002 2h13.996zM15 1H1c-.55 0-1 .45-1 1v12c0 .55.45 1 1 1h14c.55 0 1-.45 1-1V2c0-.55-.45-1-1-1z'/%3E%3Cpath d='M13 4.5a1.5 1.5 0 1 1-3.001-.001A1.5 1.5 0 0 1 13 4.5zM14 13H2v-2l3.5-6 4 5h1L14 7z'/%3E%3C/svg%3E" class="figimg" alt="id">
 <figcaption>image and caption</figcaption></figure>
 </td></tr>
-<tr><td style="width: 392px"><code>[id]: filepath</code></td><td style="width: 177px">path to image or link</td></tr>
-<tr><td style="width: 392px"><code>&gt; Blockquote</code></td><td style="width: 177px">| Blockquote</td></tr>
-<tr><td style="width: 392px"><code>* List</code><br><code>* List</code><br><code>* List</code></td><td style="width: 177px"><ul><li class="tight"><p>List</p>
+<tr><td><code>[id]: filepath</code></td><td>path to image or link</td></tr>
+<tr><td><code>&gt; Blockquote</code></td><td>| Blockquote</td></tr>
+<tr><td><code>* List</code><br><code>* List</code><br><code>* List</code></td><td><ul><li class="tight"><p>List</p>
 </li>
 <li class="tight"><p>List</p>
 </li>
@@ -84,7 +86,7 @@
 </li>
 </ul>
 </td></tr>
-<tr><td style="width: 392px"><code>1. One</code><br><code>2. Two</code><br><code>3. Three</code></td><td style="width: 177px"><ol><li class="tight"><p>One</p>
+<tr><td><code>1. One</code><br><code>2. Two</code><br><code>3. Three</code></td><td><ol><li class="tight"><p>One</p>
 </li>
 <li class="tight"><p>Two</p>
 </li>
@@ -92,13 +94,14 @@
 </li>
 </ol>
 </td></tr>
-<tr><td style="width: 392px"><code>```</code> <br><code>#code block</code> <br><code>print &quot;Hi!&quot;</code> <br><code>```</code></td><td style="width: 177px"><pre><code># code block
+<tr><td><code>```</code> <br><code>#code block</code> <br><code>print &quot;Hi!&quot;</code> <br><code>```</code></td><td><pre><code># code block
 print &quot;Hi!&quot;</code></pre></td></tr>
-<tr><td style="width: 392px"><code>---------</code></td><td style="width: 177px"><hr>
+<tr><td><code>---------</code></td><td><hr>
 </td></tr>
-<tr><td style="width: 392px"><code>::: indented</code><br><code>Block elements. The attribute</code> <br><code>can be `indented`, `centered`,</code><br><code>or `header`.</code><br><code>:::</code></td><td style="width: 177px"><div class="indented"><p>Block elements. The attribute can be <code>indented</code>, <code>centered</code>, or <code>header</code>.</p>
+<tr><td><code>::: indented</code><br><code>Block elements. The attribute</code> <br><code>can be `indented`, `centered`,</code><br><code>or `header`.</code><br><code>:::</code></td><td><div class="indented"><p>Block elements. The attribute can be <code>indented</code>, <code>centered</code>, or <code>header</code>.</p>
 </div>
 </td></tr>
+<tr></tr>
 </table>
 <p>Pipe Tables</p>
 <pre><code>| Head 1  |  Head 2  | Head 3  |
@@ -952,7 +955,10 @@ Col B	11	25	14`` 'kips'"><math><mrow><mi>P</mi><msub><mrow></mrow><mtext>a</mtex
 <div class="indented"><p><code>@test P_u ≤ ϕR_n</code></p>
 </div>
 <p>The result will be one of these two messages:</p>
-<table class="nogrid"><tr><td style="width: 157px"><span class='hurmet-calc' data-entry='P_u ≤ ϕR_n, ok ✓'><math><mrow><mi>P</mi><msub><mrow></mrow><mtext>u</mtext></msub><mo>≤</mo></mrow><mrow><mrow><mrow><mi mathvariant="normal">ϕ</mi></mrow><mrow><mi mathvariant="normal">R</mi></mrow><msub><mrow></mrow><mtext>n</mtext></msub></mrow><mo separator="true">,</mo><mspace width="0.2222em"></mspace></mrow><mrow><mrow><mrow><mi mathvariant="normal">o</mi></mrow><mrow><mi mathvariant="normal">k</mi></mrow></mrow><mi>✓</mi></mrow></math></span></td><td style="width: 178px"><span class='hurmet-tex' data-entry='P_u \nleq ϕR_n, \colorbox{Salmon}{ n.g.}'><math><mrow><msub><mi>P</mi><mi>u</mi></msub><mo>≰</mo></mrow><mrow><mi>ϕ</mi><msub><mi>R</mi><mi>n</mi></msub><mo separator="true">,</mo></mrow><mrow><mrow mathbackground="#f8948c" style="padding:3pt 0 3pt 0;"><mspace width="3pt"></mspace><mrow><mtext> </mtext><mtext>n</mtext><mtext>.</mtext><mtext>g</mtext><mtext>.</mtext></mrow><mspace width="3pt"></mspace></mrow></mrow></math></span></td></tr>
+<table class="nogrid" style="width: 335px"><colgroup><col style="width: 157px"></col>
+<col style="width: 178px"></col>
+<td><span class='hurmet-calc' data-entry='P_u ≤ ϕR_n, ok ✓'><math><mrow><mi>P</mi><msub><mrow></mrow><mtext>u</mtext></msub><mo>≤</mo></mrow><mrow><mrow><mrow><mi mathvariant="normal">ϕ</mi></mrow><mrow><mi mathvariant="normal">R</mi></mrow><msub><mrow></mrow><mtext>n</mtext></msub></mrow><mo separator="true">,</mo><mspace width="0.2222em"></mspace></mrow><mrow><mrow><mrow><mi mathvariant="normal">o</mi></mrow><mrow><mi mathvariant="normal">k</mi></mrow></mrow><mi>✓</mi></mrow></math></span></td><td><span class='hurmet-tex' data-entry='P_u \nleq ϕR_n, \colorbox{Salmon}{ n.g.}'><math><mrow><msub><mi>P</mi><mi>u</mi></msub><mo>≰</mo></mrow><mrow><mi>ϕ</mi><msub><mi>R</mi><mi>n</mi></msub><mo separator="true">,</mo></mrow><mrow><mrow mathbackground="#f8948c" style="padding:3pt 0 3pt 0;"><mspace width="3pt"></mspace><mrow><mtext> </mtext><mtext>n</mtext><mtext>.</mtext><mtext>g</mtext><mtext>.</mtext></mrow><mspace width="3pt"></mspace></mrow></mrow></math></span></td></colgroup>
+<tr></tr>
 </table>
 <p>If the test fails, the message is also written to the console. So you can run an entire document and get notifications in one place if something has gone wrong. (You can see a browser console by typing Ctrl-Shift-I.)</p>
 <p>If you have previously assigned a string to the variable “assert”, a failing test message takes a more informative format:</p>
