Support anonymous functions

--- a/site/manual.html
+++ b/site/manual.html
@@ -589,6 +589,7 @@ Col B	11	25	14`` 'kips'"><math><mrow><mi>P</mi><msub><mrow></mrow><mtext>a</mtex
 <th>Description</th>
 </tr>
 <tr><td>=</td><td><em>x</em> = 15</td><td>Assign a value to a variable.</td></tr>
+<tr><td>→</td><td><span class='hurmet-calc' data-entry='x → cos x'><math><mrow><mi>x</mi><mo stretchy="false">→</mo></mrow><mrow><mrow><mi>cos</mi><mo>⁡</mo><mspace width="0.1667em"></mspace></mrow><mi>x</mi></mrow></math></span></td><td>Anonymous function. Used when a function is passed as an argument to another function.<br>auto-correct: <strong>-&gt;</strong></td></tr>
 <tr><td>+</td><td> 2 + 2</td><td>Addition</td></tr>
 <tr><td>–</td><td> 5 - 3</td><td>Subtraction</td></tr>
 <tr><td>-</td><td><span class='hurmet-calc' data-entry='-4'><math><mrow><mtext>-</mtext><mn>4</mn></mrow></math></span></td><td>Unary minus</td></tr>
