Update build dependencies

--- a/site/manual.html
+++ b/site/manual.html
@@ -262,8 +262,8 @@ print &quot;Hi!&quot;</code></pre></td></tr>
 <tr><td><code>&lt;-</code></td><td>←</td><td>\xor</td><td>⊻</td><td>AA</td><td>∀</td><td>chi</td><td>χ</td></tr>
 <tr><td><code>&lt;-&gt;</code></td><td>↔</td><td>\sum</td><td>∑</td><td>EE</td><td>∃</td><td>psi</td><td>ψ</td></tr>
 <tr><td>\circ</td><td>∘</td><td>\int</td><td>∫</td><td>CC</td><td>ℂ</td><td>omega</td><td>ω</td></tr>
-<tr><td>|||</td><td>¦</td><td>\iint</td><td>∬</td><td>HH</td><td>ℍ</td><td>\hbar</td><td>ℏ</td></tr>
-<tr><td>\|</td><td>‖</td><td>ii</td><td><span class='hurmet-calc' data-entry='√(-1)'><math><msqrt><mrow><mtext>-</mtext><mn>1</mn></mrow></msqrt></math></span></td><td>NN</td><td>ℕ</td><td>\ell</td><td>ℓ</td></tr>
+<tr><td>\</td><td>\</td><td>\</td><td></td><td>¦</td><td>\iint</td><td>∬</td><td>HH</td><td>ℍ</td><td>\hbar</td><td>ℏ</td></tr>
+<tr><td>\\</td><td></td><td>‖</td><td>ii</td><td><span class='hurmet-calc' data-entry='√(-1)'><math><msqrt><mrow><mtext>-</mtext><mn>1</mn></mrow></msqrt></math></span></td><td>NN</td><td>ℕ</td><td>\ell</td><td>ℓ</td></tr>
 <tr><td>/_</td><td>∠</td><td>OO</td><td><span class='hurmet-calc' data-entry='O︀'><math><mrow><mi>O</mi><mtext>︀</mtext></mrow></math></span></td><td>QQ</td><td>ℚ</td><td>\euro</td><td>€</td></tr>
 <tr><td></td><td></td><td>\c</td><td>¢</td><td>RR</td><td>ℝ</td><td>\yen</td><td>¥</td></tr>
 <tr><td></td><td></td><td></td><td></td><td>ZZ</td><td>ℤ</td><td></td><td></td></tr>
