Revert to j for imaginary numbers

--- a/site/index.html
+++ b/site/index.html
@@ -36,7 +36,7 @@
  
 <article>
 
-<div id="slogan"><h4>Calculate and communicate</h4></div>
+<div id="slogan"><h4>A notebook for calculations</h4></div>
 
 <div id=editor class="pica" style="margin-bottom: 23px"></div>
 <div style="display: none" id="content">
