--- a/site/sample.html
+++ b/site/sample.html
@@ -55,7 +55,7 @@ Display:
   % no echo, ! no result</code></pre>
 </div>  
 
-<div id="slogan"><h4>Calculate and communicate</h4></div>
+<div id="slogan"><h4>A notebook for calculations</h4></div>
  
 <div id=editor class="pica" style="margin-bottom: 23px"></div>
 <div style="display: none" id="content">
