Prevent newline between </p> and </li>

--- a/site/unit-definitions.html
+++ b/site/unit-definitions.html
@@ -24,8 +24,7 @@
 <th>amount</th>
 <th>luminous<br>intensity</th>
 <th>money</th>
-<th>Comment</th>
-</tr>
+<th>Comment</th></tr>
 <tr><td>#</td><td>0.45359237</td><td>0</td><td>0</td><td>0</td><td>1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>pound (mass)</td></tr>
 <tr><td>$</td><td>1</td><td>0</td><td>USD</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td>US dollar</td></tr>
 <tr><td>&#x27;</td><td>0.3048</td><td>0</td><td>0</td><td>1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>Foot</td></tr>
@@ -546,7 +545,6 @@
 <tr><td>℉</td><td><math><mfrac><mn>5</mn><mn>9</mn></mfrac></math></td><td>459</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td>0</td><td>0</td><td>0</td><td>Fahrenheit</td></tr>
 <tr><td>Ω</td><td>1</td><td>0</td><td>siSymbol</td><td>2</td><td>1</td><td>-3</td><td>-2</td><td>0</td><td>0</td><td>0</td><td>0</td><td>ohm</td></tr>
 <tr><td>K</td><td>1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td>0</td><td>0</td><td>0</td><td>Kelvin</td></tr>
-<tr><td>Å</td><td>0.0000000001</td><td>0</td><td>0</td><td>1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>angstrom</td></tr>
-</table>
+<tr><td>Å</td><td>0.0000000001</td><td>0</td><td>0</td><td>1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>angstrom</td></tr></table>
 </body>
 </html>
