Add guides and formulas to docs

--- a/site/index.html
+++ b/site/index.html
@@ -27,8 +27,20 @@
 <nav>
    <ul>
      <li><a href="/sample.html" target="_blank">Sample</a></li>
+     <li><a href="/manual.html#calculation-tutorial" target="_blank">Tutorial</a></li>
      <li><a href="/manual.html" target="_blank">Documentation</a></li>
-     <li><a href="https://github.com/ronkok/Hurmet" target="_blank">GitHub</a></li>
+     <li><details><summary>Formulas</summary><ul>
+       <li><a href="guides/Areas.html" target="_blank">Areas</a></li>
+       <li><a href="guides/Computing-Pi.html" target="_blank">Computing Pi</a></li>
+       <li><a href="guides/Financial.html" target="_blank">Financial</a></li>
+       <li><a href="guides/Root-Finding.html" target="_blank">Root Finding</a></li>
+     </ul></details></li>
+     <li><details><summary>Guides</summary><ul>
+      <li><a href="guides/Why-Hurmet.html" target="_blank">Why Hurmet?</a></li>
+      <li><a href="guides/Beam-Diagrams.html" target="_blank">Beam Diagrams</a></li>
+      <li><a href="guides/Concrete-Column-Interaction.html" target="_blank">Concrete Column Interaction</a></li>
+    </ul></details></li>
+    <li><a href="https://github.com/ronkok/Hurmet" target="_blank">GitHub</a></li>
    </ul>
 </nav>
 
