--- a/preview/index.html
+++ b/preview/index.html
@@ -11,11 +11,21 @@
 
 <body>
 <nav>
-   <ul>
-    <li><a href="./sample.html" target="_blank">Sample</a></li>
-     <li><a href="./manual.html" target="_blank">Documentation</a></li>
-     <li><a href="https://github.com/ronkok/Hurmet" target="_blank" style="color:#000">GitHub</a></li>
-   </ul>
+  <ul>
+    <li><a href="/sample.html" target="_blank">Sample</a></li>
+    <li><a href="/manual.html#calculation-tutorial" target="_blank">Tutorial</a></li>
+    <li><a href="/manual.html" target="_blank">Documentation</a></li>
+    <li><details><summary>Formulas</summary><ul>
+      <li><a href="guides/Computing-Pi.html" target="_blank">Computing Pi</a></li>
+      <li><a href="guides/Financial.html" target="_blank">Financial</a></li>
+    </ul></details></li>
+    <li><details><summary>Guides</summary><ul>
+      <li><a href="guides/Why-Hurmet.html" target="_blank">Why Hurmet?</a></li>
+      <li><a href="guides/Beam-Diagrams.html" target="_blank">Beam Diagrams</a></li>
+      <li><a href="guides/Concrete-Column-Interaction.html" target="_blank">Concrete Column Interaction</a></li>
+    </ul></details></li>
+    <li><a href="https://github.com/ronkok/Hurmet" target="_blank">GitHub</a></li>
+  </ul>
 </nav>
 
 <div id="title">Hurmet</div>
